<resources>
    <string name="app_name">FlightSearch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="load_data">Load Data</string>
    <string name="from">from</string>
    <string name="airport_name_placeholder">Airport Name Placeholder</string>
    <string name="country_placeholder">Country - Placeholder</string>
    <string name="search_flight">Search Flight</string>
    <string name="import_airport_data">Import Airport Data</string>
    <string name="import_airline_data">Import Airline Data</string>
    <string name="import_routes_data">Import Routes Data</string>
    <string name="import_planes_data">Import Planes Data</string>
    <string name="airlinelogo">airlineLogo</string>
    <string name="airline_name">Airline Name</string>
    <string name="non_stop_flights_only">Non Stop Flights Only</string>
    <string name="country">Country</string>
    <string name="refresh_db">REFRESH DB</string>
</resources>