<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/outlined_container"
        android:padding="25dp"
        android:layout_marginVertical="5dp"
        >

    <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:text="@string/from"
            android:textColor="?attr/secondaryTextColor"
            android:textAllCaps="true"
            android:textStyle="bold"

            />

    <TextView
            android:id="@+id/airport_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/label"
            app:layout_constraintTop_toBottomOf="@+id/label"
            android:text="@string/airport_name_placeholder"
            app:layout_constraintEnd_toStartOf="@+id/icon"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            android:textSize="18sp"
            />

    <TextView
            android:id="@+id/country_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/secondaryTextColor"
            android:text="@string/country_placeholder"
            app:layout_constraintStart_toStartOf="@+id/airport_name"
            app:layout_constraintTop_toBottomOf="@+id/airport_name"
            app:layout_constraintEnd_toEndOf="@+id/airport_name"
            />

    <ImageView
            android:id="@+id/icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_plane_take_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label"
            app:layout_constraintBottom_toBottomOf="@+id/country_name"
            android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>